updated the about page

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+html {
+  scroll-behavior: smooth;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,4 +17,11 @@
 body {
   @apply bg-gradient-to-br from-[#020617] via-[#020617] to-[#020617] text-white;
   font-family: 'Inter', sans-serif;
+  overflow-x: hidden;
+}
+
+
+/* Scroll snapping for sections */
+section {
+  scroll-snap-align: start;
 }
